<resources>

    <string name="app_name">Meine Mediathek</string>
    <string name="btn_search">Suchen</string>
    <string name="not_title_download_of_movie">Lade %s herunter</string>
    <string name="not_desc_download_of_movie">Film wird heruntergeladen. Bitte warten&#8230;</string>
    <string name="not_desc_download_of_movie_finished">Download abgeschlossen!</string>
    <string name="not_desc_download_of_movie_failed">Download fehlgeschlagen!</string>
    <string name="not_desc_download_of_movie_canceled">Download abgebrochen!</string>
    <string name="btn_download_movie">Film herunterladen</string>
    <string name="tv_movie_title">Titel:</string>
    <string name="tv_movie_description">Beschreibung:</string>
    <string name="et_hint_searchfortitle">Nach einem Filmtitel suchen</string>
    <string name="btn_agree">Zustimmen</string>
    <string name="btn_disagree">Ablehnen</string>
    <string name="btn_cancel_download">Download abbrechen</string>
    <string name="dlg_title_download_on_mobile">Sind Sie sicher?</string>
    <string name="dlg_msg_download_on_mobile">Sie verwenden aktuell keine WLAN Verbindung. Wenn Sie die Filme über ihre mobile Datenverbindung herunterladen, können hohe Kosten entstehen.\n\nWollen Sie den Film wirklich über die mobile Datenverbindung herunterladen?</string>
    <string name="dlg_title_license">Lizenz</string>
    <string name="dlg_msg_license">Diese Anwendung wurde für den Zweck entwickelt, ihre Lieblingsfilme aus der ZDF Mediathek herunterladen und diese später ohne Internetzugriff anschauen zu können. Diese Anwendung wurde NICHT dazu entwicklet kopiergeschütztes Material herunterzuladen.\n\nDer Inhalt wird durch eine dritte Person bereitgestellt und Sie haben deren Lizenzen und Ansprüche zu erfüllen, um die Filme herunterladen zu dürfen.\n\nWenn Sie den oben genannten Bedingungen zustimmen und erklären niemanem Schaden zuzuführen, dürfen Sie die Anwendung gerne benutzen. Andernfalls begeben Sie sich bitte zurück in den Play Store und deinstallieren Sie diese Anwendung.</string>
    <string name="dlg_title_timeout">Zeitüberschreitung</string>
    <string name="dlg_msg_timeout">Bei der Anfrage nach Informationen zu ihrer Suche ist eine Zeitüberschreitung aufgetreten. Meist kann dies dadurch behoben werden, dass Sie zurückgehen und es erneut versuchen.</string>
    <string name="dlg_title_appcrash">Absturz</string>
    <string name="dlg_msg_appcrash">Entschuldigen Sie, aber es scheint ein Fehler in der Anwendung vorhanden zu sein, der zum Absturz dieser geführt hat. Bitte helfen Sie mir den Fehler zu beheben und senden Sie mir Informationen zu um diesen aufzufinden.\n\nMöchten Sie mir diese Informationen per Email senden?</string>
    <string name="tv_player_notice">Bitte beachten Sie, dass der Standardplayer von Android evtl. nicht in der Lage ist die heruntergeladenen Filme abzuspielen. Wir empfehlen die Verwendung des <a href="market://details?id=com.inisoft.mediaplayer.a">DICE Players</a> oder des <a href="market://details?id=org.videolan.vlc.betav7neon">VLC Players</a> aus dem Google Play Store, um sich Ihre Downloads anzusehen.</string>
    <string name="mnu_title_preferences">Einstellungen</string>
    <string name="dlg_title_noresults">Keine Ergebnisse</string>
    <string name="dlg_msg_noresults">Leider konnten für die von Ihnen gewählten Suchbegriffe keine Ergebnisse gefunden werden.</string>
    <string name="mnu_title_bugreport">Fehlerbericht senden</string>
    <string name="mnu_title_test_download">Test Download</string>
    <string name="btn_rate_app">App bewerten</string>
    <string name="tv_movie_fsk_restriction_warning_title">Warnung:</string>
    <string name="tv_movie_fsk_restriction_warning_text">Der von Ihnen gewählte Film steht unter Restriktionen der FSK und kann nur zu bestimmten Uhrzeiten in Deutschland heruntergeladen werden. Sie befinden sich aktuell außerhalb dieser gültigen Uhrzeit und können den Film leider nicht herunterladen.</string>
    <!--
    <string name="sp_itm_content_provider_ard">ARD Mediathek</string>
    <string name="sp_itm_content_provider_wdr">WDR Mediathek</string>
    -->
    <string name="sp_itm_content_provider_zdf">ZDF Mediathek</string>

    <string-array name="sp_content_provider">

        <!--
        <item>@string/sp_itm_content_provider_ard</item>
        <item>@string/sp_itm_content_provider_wdr</item>
        -->
        <item>@string/sp_itm_content_provider_zdf</item>
    </string-array>


</resources>