<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item1"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
        android:title="@string/mnu_title_preferences"
        android:visible="false">
    </item>
    <item
        android:id="@+id/mnu_send_bugreport"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="ifRoom"
        android:title="@string/mnu_title_bugreport"
        android:visible="false"/>
    <item
        android:id="@+id/mnu_test_download"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_report_image"
        android:showAsAction="ifRoom"
        android:title="@string/mnu_title_test_download"
        android:visible="false"/>

</menu>